--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Source+Sans+Pro&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Source+Sans+Pro:wght@400;600&display=swap');
 /* Main Areas */
 
 body {
@@ -19,23 +18,26 @@ button {
 .inputArea {
     display: flex;
     flex-flow: column;
-    max-width: 600px;
     margin-left: 64px;
 }
 
 h1 {
-    color: rgb(54, 57, 65);
-    font-weight: 500;
-    font-size: 36px;
+    color: rgb(66, 69, 78);
+    font-weight: 700;
+    font-size: 28px;
     font-family: Montserrat;
+    text-transform: uppercase;
+    padding: 0;
+    margin-top: 18px;
 }
+
+
 
 
 button {
     align-self: center;
     padding: 10px 24px;
-    margin-top: 20px;
-    background: rgb(39, 44, 50);
+    background: rgb(67, 75, 85); 
     color: white;
     border: none;
     border-radius: 2px;
@@ -44,26 +46,32 @@ button {
     font-size: 16px;
 }
 
-#info {
-    margin-top: 6px;
+#info {}
+
+.controls {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 8px;
+    align-items: center;
 }
 
 button:hover {
-    background: rgb(50, 53, 56);
+    background: rgb(68, 71, 75);
 }
 
 textarea {
     padding: 20px;
     color: rgb(30, 30, 32);
-    min-width: 400px;
     margin-left: -3px;
     margin-top: 5px;
     border: 1px solid rgb(221, 223, 231);
+    height: auto;
+    min-width: 30vw;
 }
 
 span {
     display: block;
-    font-weight: 700;
+    font-weight: 600;
     padding: 16px 8px 8px 24px;
     color: rgb(106, 111, 128);
     font-family: Montserrat;
@@ -80,22 +88,14 @@ label {
     flex-flow: column wrap;
     text-transform: uppercase;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 600;
     margin-top: 32px;
     font-family: Montserrat;
+    color;
+    color: rgb(54, 57, 65);
 
 }
 
-h2 {
-    font-weight: 400;
-    font-size: 20px;
-}
-
-h1,
-h2 {
-    padding: 0;
-    margin: 0;
-}
 
 .numberTitle {
     font-weight: 700;
@@ -111,10 +111,11 @@ ol:first-of-type {
 /* Lists */
 
 li li {
-    padding: 2px 8px;
+    padding: 2px 4px;
     /* display: inline-block; */
 
 }
+
 
 #wordList {
     padding: 0;
@@ -126,11 +127,11 @@ li li {
 
 #wordList>li {
     border: 1px solid rgb(221, 223, 231);
-    margin: 10px 0 10px 15px;
+    margin: 10px 15px 10px 0;
     background: white;
     display: flex;
     flex-flow: column;
-    flex: 1 1 250px;
+    flex: 1 1 min-content;
 }
 
 
